Mon Nov 16 17:15:52 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.h:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector_exec.cpp:
          Resolved compiler issues on Windows.

Mon Nov 16 15:02:31 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector.mpc:
          Macros property named.

Mon Nov 16 13:59:05 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.cpp:
          Checked for nil before using ports.

        * connectors/dds4ccm/tests/UnkeyedSamples/Base/Unkeyed_Test_Base.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector.idl:
        * connectors/dds4ccm/tests/UnkeyedSamples/Connector/Unkeyed_Test_Connector.mpc:
          Defines were not property named.

Mon Nov 16 10:21:22 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
          Resolved runtime error. Qos should be initialized.

Mon Nov 16 07:19:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataReaderQos.h
        * connectors/dds4ccm/impl/ndds/DeadlineQosPolicy.h
        * connectors/dds4ccm/impl/ndds/DestinationOrderQosPolicy.h
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/DurabilityQosPolicy.h
        * connectors/dds4ccm/impl/ndds/DurabilityServiceQosPolicy.h
        * connectors/dds4ccm/impl/ndds/HistoryQosPolicy.h
        * connectors/dds4ccm/impl/ndds/LifespanQosPolicy.h
        * connectors/dds4ccm/impl/ndds/LivelinessQosPolicy.h
        * connectors/dds4ccm/impl/ndds/OwnershipQosPolicy.h
        * connectors/dds4ccm/impl/ndds/ReliabilityQosPolicy.h